Fix the issue of extra white space

--- a/PLANome/planome/static/css/cart_detail.css
+++ b/PLANome/planome/static/css/cart_detail.css
@@ -1,7 +1,6 @@
 .cart, .emptyCart {
   width: 100vw;
   height: auto;
-  margin-top: 270px;
 }
 
 .emptyCart img {
